CSS Added display grid to body, necessary to avoid iframe and disclaimer overlap in chrome print.

--- a/main.css
+++ b/main.css
@@ -13,3 +13,7 @@ iframe {
   width: 100%;
   height: 1800px;
 }
+
+body {
+  display: grid;
+}
